--- a/index.html
+++ b/index.html
@@ -3,42 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="icon" type="image/x-icon" href="android-icon-192x192.png">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<body style="background-color: #b5e0e0;">
+    <nav class="navbar navbar-expand-lg rounded-3 m-2 opacity-75" style="background-color: #65c4c4;">
+        <div class="container-fluid">
+          <a class="navbar-brand fs-1 text" href="#"><img src="LOGO HOME.jpg" alt="" srcset="">Hassber</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Nuestros Productos
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Producto x</a></li>
+                  <li><a class="dropdown-item" href="#">Producto 1</a></li>
+                  <li><a class="dropdown-item" href="#">Producto 3</a></li>      
+                  <li><a class="dropdown-item" href="#">Producto 2</a></li>
+                </ul>
+              </li>
 
-<body>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"><img src="LOGO HOME.jpg" alt="" srcset=""></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-          </ul>
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Escribe aqui" aria-label="Search">
+              <button class="btn btn-outline-success text-light border border-light me-2" style="background-color: #48426b56;" type="submit">Buscar</button>
+              <button class="btn btn-outline-success text-light border border-light me-2" style="background-color: #48426b56" type="button">Logeate!</button>
+              <button class="btn btn-outline-success text-light border border-light me-2" style="background-color: #ffc107;"  type="button" onclick="location.href='formulario.html'">Registrarse</button>
+            </form>
+          </div>
         </div>
-        <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-      </nav>
+    </nav>
 
-    
-    
+    <section id="main-section" class="my-5">
+        <div class="row">
+          <div class=" d-flex justify-content-center">
+            <p>Este es el contenido principal de tu página. Puedes agregar texto, imágenes, vídeos, etc. para dar más información sobre tu sitio o tus servicios.</p>
+          </div>
+          <div class="col-md-12 d-flex justify-content-center">
+            <img src="IMAGEN LOGO GRANE.jpg" alt="Placeholder Image" class="img-fluid">
+          </div>
+        </div>
+      </section>
+    </div>
 </body>
 </html>
