--- a/formulario.html
+++ b/formulario.html
@@ -6,6 +6,17 @@
     <title>formulario.html</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        window.onload = function(){
+        (function(d, script) {
+        script = d.createElement('script');
+        script.type = 'text/javascript';
+        script.async = true;
+        script.src = 'https://w.app/widget-v1/yz5EYR.js';
+        d.getElementsByTagName('head')[0].appendChild(script);
+        }(document));
+        };
+        </script>
 </head>
 <body style="background-color: white; ">
     <nav class="navbar navbar-expand-lg rounded-3 m-2 opacity-75 shadow border border-light" style="background-color: #65c4c4;">
@@ -18,12 +29,14 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <button class="btn btn-outline-success text-light border border-light me-2 " style="background-color: #48426b56"  onclick="location.href='prod.html'">PRODUCTOS</button>
 
-              <li class="ms-5 ps-5 container-fluid ">
-                <img src="whatsapp logo.png" alt="" srcset="" width="45px" height="45px">
-                <img src="llamada-telefonica.png" alt="" srcset="" width="45px" height="45px">
-                Llamados y WhatsApps ,
-                +(56) 9 5520 1196
-              </li>
+                <li class="ms-5 ps-5 container-fluid ">
+                    <a href="https://w.app/hassber">
+                    <img src="whatsapp logo.png" alt="" srcset="" width="45px" height="45px">
+                    </a>
+                    <img src="llamada-telefonica.png" alt="" srcset="" width="45px" height="45px">
+                    Llamados y WhatsApps ,
+                    +(56) 9 5520 1196
+                  </li>
 
             </ul>
             <form class="d-flex">
