--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   
             <div class="col-md-4 text-body-secondary text-center">
               
-              <h5 class="mb-3">¡Síguenos en redes sociales!</h5>
+              <h5 class="mb-3">¡Síguenos en redes sociales</h5>
               <a href="https://web.facebook.com/profile.php?id=100063694474703">
                 <img src="MEDIA/instagram_2111463.png" width="45px" height="45px">
                 </a>
