Cambio modal en formulario

--- a/formulario.html
+++ b/formulario.html
@@ -42,7 +42,7 @@
 
             </ul>
             <form class="d-flex">
-              <button class="btn btn-outline-success text-light border border-light me-2 card" style="background-color: #48426b56" type="button">Logeate!</button>
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">Logeate!</button>
               <button class="btn btn-outline-success text-light border border-light me-2 card" style="background-color: #ffc107;"  type="button" onclick="location.href='formulario.html'">Registrarse</button>
             </form>
           </div>
@@ -189,6 +189,27 @@
           </footer>
           </div>
       </section>    
+      <!-- Modal -->
+
+      <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              ...
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
     
 </body>
 </html>
