--- a/Historia.html
+++ b/Historia.html
@@ -55,11 +55,12 @@
         <div class="row">
             <div class="row col-md-4 m-1 border rounded-3  " style="font-family: Arial, Helvetica, sans-serif;">
                 <h2 class=" mb-4">Nuestra Historia</h2>
-                <p>Imprenta Éxito fue fundada en el año 1990 por Carla Hassan en la ciudad de Ciudad de Viña Del Mar. Desde sus humildes comienzos como una pequeña imprenta local, hemos crecido hasta convertirnos en una de las empresas líderes en  subministros de impresion.</p>
-                <p>Nuestra dedicación a la calidad y al servicio al cliente nos ha permitido expandirnos rápidamente. En el año 2005, inauguramos nuestra primera sucursal en la ciudad vecina, lo que nos permitió atender a un número aún mayor de clientes.</p>
-                <p>En Imprenta Éxito, nos enorgullece ofrecer una amplia gama de servicios de impresión, incluyendo impresión offset, impresión digital, serigrafía y más. Nuestro equipo de expertos en impresión trabaja arduamente para garantizar que cada proyecto cumpla con los más altos estándares de calidad y precisión.</p>
-                <p>A lo largo de los años, hemos invertido en tecnología de vanguardia y en capacitación continua para nuestro personal, lo que nos ha permitido mantenernos a la vanguardia de la industria y ofrecer soluciones de impresión innovadoras y de alta calidad.</p>
-                <p>En Imprenta Éxito, estamos comprometidos con la satisfacción del cliente y con superar las expectativas en cada proyecto. Esperamos poder servirle y ayudarle a hacer realidad sus proyectos de impresión.</p>
+                <p>Bienvenido a Hassber, un negocio familiar con raíces profundas en la hermosa comuna de Viña del Mar. Nuestra historia se remonta al año 2018, cuando decidimos embarcarnos en una aventura empresarial impulsados por nuestra pasión por la creatividad y el emprendimiento.</p>
+                <p>Desde nuestros modestos comienzos en el garage de nuestra casa, nos hemos dedicado con fervor a proporcionar a nuestros clientes los mejores insumos para sublimación y estampados. Con el tiempo, nuestro compromiso con la calidad y el servicio al cliente nos ha permitido crecer y convertirnos en un referente en nuestra comunidad.</p>
+                <p>Lo que comenzó como un sueño compartido entre familiares se ha convertido en una empresa próspera y en constante evolución. Nuestro compromiso con la excelencia nos ha llevado a expandir nuestro catálogo de productos y servicios, siempre manteniendo nuestra atención en las necesidades y deseos de nuestros clientes.</p>
+                <p>En Hassber, no solo ofrecemos productos de alta calidad, sino que también valoramos profundamente las relaciones con nuestros clientes. Nos enorgullece brindar un servicio personalizado y atención al detalle en cada interacción.</p>
+                <p>A medida que miramos hacia el futuro, estamos emocionados por continuar creciendo y sirviendo a nuestra comunidad. Nos comprometemos a seguir siendo una fuente confiable de inspiración y soluciones para todos tus proyectos de sublimación y estampados.</p>
+                <p>¡Gracias por ser parte de nuestra historia y por elegirnos como tu socio en la creatividad!</p>
             </div>
             <div class="row col-md-7 m-1" style="font-family: Arial, Helvetica, sans-serif;">
                 <img class="border rounded-3" src="media/imagen galeria 1.jpg" alt="" srcset="">
