--- a/Historia.html
+++ b/Historia.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hassber Confecciones</title>
+    <title>Hassber</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -79,7 +79,7 @@
             <div class="row col-md-4 d-flex text-body-secondary text-center border-end justify-content-center " >
               <h5 class="mb-3">Nuestra tienda</h5>
 
-              <p class="piePage ">Direccion: hernando de magallanes 2036 , Quilpué, Chile</p>
+              <p class="piePage ">Dirección: Hernando de Magallanes 2036 , Quilpué, Chile</p>
               <iframe class="row col-ms-10 d-flex justify-content-center ms-1" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3344.690397051219!2d-71.4332049235643!3d-33.03828627652434!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9689d90807dfd9f7%3A0x13bbea4317ab589f!2sHernando%20de%20Magallanes%202036%2C%202420764%20Quilpu%C3%A9%2C%20Valpara%C3%ADso!5e0!3m2!1ses-419!2scl!4v1713738903074!5m2!1ses-419!2scl" width="150" height="112" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               
 
@@ -89,7 +89,7 @@
               
             <div class="col-md-4 text-body-secondary text-center border-end">
                 <img class="justify-content-center" width="40px" height="40px" src="MEDIA/correo-electronico-vacio.png" alt="">
-                <p class="piePage">Email:hassberconfecciones@gmail.com</p>
+                <p class="piePage">Email: hassberconfecciones@gmail.com</p>
               <h5 class="mb-3">Métodos de pago</h5>
                 <img src="MEDIA/icons8-visa-48.png" width="40px" height="40px">
                 <img src="MEDIA/icons8-master-card-24.png" width="40px" height="40px">
