--- a/galery.html
+++ b/galery.html
@@ -79,7 +79,7 @@
             <div class="row col-md-4 d-flex text-body-secondary text-center border-end justify-content-center " >
               <h5 class="mb-3">Nuestra tienda</h5>
 
-              <p class="piePage ">Direccion: hernando de magallanes 2036 , Quilpué, Chile</p>
+              <p class="piePage ">Direccion: Hernando de Magallanes 2036 , Quilpué, Chile</p>
               <iframe class="row col-ms-10 d-flex justify-content-center ms-1" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3344.690397051219!2d-71.4332049235643!3d-33.03828627652434!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9689d90807dfd9f7%3A0x13bbea4317ab589f!2sHernando%20de%20Magallanes%202036%2C%202420764%20Quilpu%C3%A9%2C%20Valpara%C3%ADso!5e0!3m2!1ses-419!2scl!4v1713738903074!5m2!1ses-419!2scl" width="150" height="112" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               
 
