--- a/formulario.html
+++ b/formulario.html
@@ -53,6 +53,11 @@
     <form class="p-3 rounded-3 m-2 justify-content-center border border-light " action="#" method="post" style="background-color: #65c4c4;font-family: Arial, Helvetica, sans-serif;">
         <h2>Formulario de Contacto</h2>
         <div class="p-1 ">
+          <label for="rut">Rut:</label><br>
+          <input type="text" id="rut" name="rut" required oninput="checkRut(this)" placeholder="Ingrese RUT">
+          <button type="submit">Validar RUT</button> 
+        </div>
+        <div class="p-1 ">
             <label for="nombre">Nombre completo:</label><br>
             <input type="text" id="nombre" name="nombre" required minlength="2" maxlength="50">
         </div>
@@ -60,10 +65,12 @@
             <label for="correo">Correo electrónico:</label><br>
             <input type="email" id="correo" name="correo" required>
         </div>
+
+    
         <div class="p-1">
             <label for="telefono">Teléfono:</label><br>
-            <input type="tel" id="telefono" name="telefono" pattern="[0-9]{10}">
-            <small>Introduce un número de teléfono de 10 dígitos.</small>
+            <input type="tel" id="telefono" name="telefono" pattern="[0-9]{9}">
+            <small>Introduce un número de teléfono de 9 dígitos.</small>
         </div >
 
         <div class="p-1">
@@ -212,6 +219,8 @@
     </div>
   </div> 
       
-   
+</body>  
+
+<script src="java.js"></script>
 
 </html>
