--- a/formulario.html
+++ b/formulario.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
+    <link rel="stylesheet" href="STYLE/style.css">
     <link rel="icon" type="image/x-icon" href="media/LOGO HOME.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -87,7 +88,7 @@
         </div>
         <div class="p-1">
             <label for="birthdate">Fecha de Nacimiento:</label>
-            <input type="date" class="form-control" id="birthdate" name="birthdate" required="">
+            <input class="row col-ms-12" type="date" class="form-control" id="birthdate" name="birthdate" required="">
         </div>
         <div class="p-1">
             <label for="pais">País:</label><br>
@@ -150,6 +151,11 @@
                 <br>
                 <br>
                 <p class="text-center"></p>
+                <div id="time-widget">
+                  <h2>Hora Actual</h2>
+                  <div id="current-time"></div>
+                  <div id="city"></div>
+              </div>
             </div>
   
   
@@ -221,6 +227,7 @@
       
 </body>  
 
-<script src="java.js"></script>
+<script src="SCRIPT/java.js"></script>
+<script src="SCRIPT/script2.js"></script>
 
 </html>
