--- a/formulario.html
+++ b/formulario.html
@@ -54,17 +54,17 @@
     <form class="p-3 rounded-3 m-2 justify-content-center border border-light " action="#" method="post" style="background-color: #65c4c4;font-family: Arial, Helvetica, sans-serif;">
         <h2>Formulario de Contacto</h2>
         <div class="p-1 ">
-          <label for="rut">Rut:</label><br>
-          <input type="text" id="rut" name="rut" required oninput="checkRut(this)" placeholder="Ingrese RUT">
-          <button type="submit">Validar RUT</button> 
+          <label for="rut">RUT:</label><br>
+          <input type="text" id="rut" name="rut" required pattern="\d{1,2}\.\d{3}\.\d{3}-[\dkK]" title="Ingresa un RUT válido" oninput="formatRut(this)">
         </div>
         <div class="p-1 ">
             <label for="nombre">Nombre completo:</label><br>
             <input type="text" id="nombre" name="nombre" required minlength="2" maxlength="50">
         </div>
         <div class="p-1">
-            <label for="correo">Correo electrónico:</label><br>
-            <input type="email" id="correo" name="correo" required>
+          <label for="email">Email:</label><br>
+          <input type="email" id="email" name="email" required>
+            
         </div>
 
     
@@ -229,5 +229,6 @@
 
 <script src="SCRIPT/java.js"></script>
 <script src="SCRIPT/script2.js"></script>
+<script src="SCRIPT/script3.js"></script>
 
 </html>
